--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@ hello!
   my sheep. I very lucky to have met you and can very happiness to like you.
                                                 
                                               
-                                                     like you，傻笨猪
-                                                        2020/10/12
+                                                     like you，your 傻笨猪
+                                                          2020/10/12
